# SPE-Creator

./: README.md
backendSPECreator/: package.json  server.js
backendSPECreator/SPE-backend/: pyproject.toml
backendSPECreator/SPE-backend/src/: config.py  main.py
backendSPECreator/SPE-backend/src/alembic/: env.py
backendSPECreator/SPE-backend/src/alembic/versions/: 871c9ea3c6fd_.py  91a830200e48_.py
backendSPECreator/SPE-backend/src/authorization/: base_config.py  manager.py  models.py  schemas.py  utils.py
backendSPECreator/SPE-backend/src/projects/: models.py
backendSPECreator/SPE-backend/src/services/: database.py
backendSPECreator/SPE_creator_backend/: pyproject.toml
backendSPECreator/SPE_creator_backend/src/alembic/: env.py
backendSPECreator/SPE_creator_backend/src/auth /: base_config.py  manager.py  models.py  utils.py
backendSPECreator/SPE_creator_backend/src/services/: database.py
frontendSPECreator/: README.md  angular.json  package-lock.json  package.json  server.ts
frontendSPECreator/src/: index.html  styles.scss
frontendSPECreator/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
frontendSPECreator/src/app/components/: components.module.ts
frontendSPECreator/src/app/guards/: log-in.guard.ts
frontendSPECreator/src/app/interfaces/: card.interface.ts  cards.interface.ts  get-users.interface.ts  new-card.interface.ts  new-user.interface.ts  user.interface.ts
frontendSPECreator/src/app/pages/: pages-routing.module.ts  pages.module.ts
frontendSPECreator/src/app/services/: get-photo.service.ts  (+2 more)
(+37 files in other folders)
