[tool.poetry]
name = "spe-creator-backend"
version = "0.1.0"
description = ""
authors = ["AveGus"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
alembic = "^1.13.2"
setuptools = "^72.2.0"
python-dotenv = "^1.0.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
